--- a/themes/custom/masaya_kemmochi_portfolio/scss/style.scss
+++ b/themes/custom/masaya_kemmochi_portfolio/scss/style.scss
@@ -38,44 +38,63 @@ p {
     }
 
     &__ttl {
-        text-align: start;
-        position: relative;
-        z-index: -1;
         font-weight: bold;
         font-family: $font-en;
-        @include rem(130);
-        letter-spacing: $en-letter-spacing;
         padding: 0 0 10px 0;
-        line-height: 1;
-        @include tablet {
-            font-size: 5rem;
-            @include rem(80);
+
+        &.ttl001 {
+            margin-bottom: 10px;
+            @include rem(100);
+            @include tablet {
+                font-size: 5rem;
+                @include rem(80);
+            }
+
+            & p {
+                @include rem(30);
+                @include tablet {
+                    font-size: 5rem;
+                    @include rem(20);
+                }
+    
+            }
         }
-
-        & span {
-            position: absolute;
-            font-weight: normal;
-
-            &.en {
-                left: 2.2em;
-                top: 1.1em;
-                @include rem(40);
-                @include tablet {
-                    @include rem(32);
-                    left: 52px;
-                    top: 47px;
-                }
+        &.ttl002 {
+            position: relative;
+            z-index: -1;
+            @include rem(130);
+            letter-spacing: $en-letter-spacing;
+            line-height: 1;
+            @include tablet {
+                font-size: 5rem;
+                @include rem(80);
             }
-            &.ja {
-                top: 6.8em;
-                left: 5.5em;
-                @include rem(16);
-                @include tablet {
+            
+            & span {
+                position: absolute;
+                font-weight: normal;
+    
+                &.en {
+                    left: 2.2em;
+                    top: 1.1em;
+                    @include rem(40);
+                    @include tablet {
+                        @include rem(32);
+                        left: 52px;
+                        top: 47px;
+                    }
+                }
+                &.ja {
+                    top: 6.8em;
+                    left: 5.5em;
                     @include rem(16);
-                    top: 83.2px;
-                    left: 0px;
+                    @include tablet {
+                        @include rem(16);
+                        top: 83.2px;
+                        left: 0px;
+                    }
                 }
-            }
+            }    
         }
     }
 
@@ -150,6 +169,10 @@ p {
             @include tablet {
                 padding: 10px 15px;
             }
+
+            &.is-admin {
+                top: 39px;
+            }
         }
     }
 
@@ -194,6 +217,10 @@ p {
             right: 10%;
             @include tablet {
                 right: 0;
+            }
+
+            &.is-admin {
+                top:39px;
             }
         }
     
