--- a/themes/custom/masaya_kemmochi_portfolio/templates/navigation/menu--mainmenu.html.twig
+++ b/themes/custom/masaya_kemmochi_portfolio/templates/navigation/menu--mainmenu.html.twig
@@ -38,7 +38,7 @@
       <li class="menu__list--item">
         <a href="{{ item.url }}">
           <span class="en">{{ item.title }}</span>
-          <span class="ja">{{ item.description }}</span>
+          <span class="ja">{{ item.original_link.pluginDefinition.description }}</span>
         </a>
       </li>
     {% endfor %}
