--- a/themes/custom/masaya_kemmochi_portfolio/templates/layout/page--front.html.twig
+++ b/themes/custom/masaya_kemmochi_portfolio/templates/layout/page--front.html.twig
@@ -46,7 +46,7 @@
 <div class="layout-container">
 
   {% if page.header %}
-  <header id="header--fixed" class="header fixed is-show" role="banner">
+  <header id="header--fixed" class="header fixed" role="banner">
     {{ page.header }}
   </header>
   {% endif %}
