実績一覧調整

--- a/themes/custom/masaya_kemmochi_portfolio/scss/style.scss
+++ b/themes/custom/masaya_kemmochi_portfolio/scss/style.scss
@@ -786,7 +786,7 @@ article {
 
     &__content {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         @include tablet {
             display: block;
         }
