--- a/themes/custom/masaya_kemmochi_portfolio/templates/views/works_list/views-view-unformatted--works-list--sitetop.html.twig
+++ b/themes/custom/masaya_kemmochi_portfolio/templates/views/works_list/views-view-unformatted--works-list--sitetop.html.twig
@@ -18,15 +18,14 @@
 {% if title %}
   <h3>{{ title }}</h3>
 {% endif %}
-{% for row in rows %}
-  {%
-    set row_classes = [
-      default_row_class ? 'views-row',
-      'work__contents delayScrollFadeUp',
-    ]
-  %}
 
-  <ul{{ row.attributes.addClass(row_classes) }}>
+<ul class="work__contents delayScrollFadeUp">
+  {% for row in rows %}
+    {%
+      set row_classes = [
+      default_row_class ? 'views-row',
+      ]
+    %}
     {{- row.content -}}
-  </ul>
-{% endfor %}
+  {% endfor %}
+</ul>
